# disasterparty

./: .env.example  .gitignore  ARCHITECTURE.md  COPYING  DOCUMENTATION.md  Makefile  Makefile.am  NEWS.md  README.md  TESTING.md  api.json  autogen.sh  config.h.in~  configure.ac  configure~  disasterparty.pc.in  libtool  missing_tests_catalog.md
.kiro/specs/code-restructuring/: design.md  requirements.md  tasks.md
.kiro/specs/core-feature-enhancements/: design.md  requirements.md  tasks.md
.kiro/steering/: project-directives.md
build-aux/: ar-lib  test-driver
docs/: DOCUMENTATION.md  PROJECT.md  ROADMAP.md
man/: Makefile  Makefile.am  disasterparty.7  disasterparty.7dp  dp_anthropic_stream_event.3  dp_anthropic_stream_event.3dp  dp_count_tokens.3  dp_count_tokens.3dp  dp_deserialize_messages_from_file.3  dp_deserialize_messages_from_file.3dp  dp_deserialize_messages_from_json_str.3  dp_deserialize_messages_from_json_str.3dp  dp_destroy_context.3  dp_destroy_context.3dp  dp_enable_advanced_features.3dp  dp_error_code_t.3  dp_error_code_t.3dp  dp_file.3  dp_free_file.3  dp_free_file.3dp  dp_free_messages.3  dp_free_messages.3dp  dp_free_model_list.3  dp_free_model_list.3dp  dp_free_response_content.3  dp_free_response_content.3dp  dp_get_user_agent.3  dp_get_user_agent.3dp  dp_get_version.3  dp_get_version.3dp  dp_init_context.3  dp_init_context.3dp  dp_init_context_with_app_info.3dp  dp_list_models.3  dp_list_models.3dp  dp_message.3  dp_message.3dp  dp_message_add_base64_image_part.3  dp_message_add_base64_image_part.3dp  dp_message_add_file_data_part.3dp  (+31 more)
src/: Makefile  Makefile.am  disasterparty.c  disasterparty.h  dp_constants.c  dp_context.c  dp_file.c  dp_message.c  dp_models.c  dp_private.h  dp_request.c  dp_serialize.c  dp_stream.c  dp_utils.c
src/.deps/: disasterparty.Plo
tests/: Makefile  Makefile.am  TESTING.md  TODO.md  test_abrupt_stream_dp.c  test_anthropic_all_event_types_dp.c  test_anthropic_auth_failure_dp.c  test_anthropic_image_generation_dp.c  test_anthropic_list_models_dp  test_anthropic_list_models_dp.c  test_anthropic_multimodal_dp  test_anthropic_multimodal_dp.c  test_anthropic_multimodal_token_count_dp.c  test_anthropic_opus_advanced_dp.c  test_anthropic_streaming_detailed_dp  test_anthropic_streaming_detailed_dp.c  test_anthropic_streaming_dp  test_anthropic_streaming_dp.c  test_anthropic_streaming_error_dp.c  test_anthropic_streaming_multimodal_detailed_dp  test_anthropic_streaming_multimodal_detailed_dp.c  test_anthropic_streaming_multimodal_dp  test_anthropic_streaming_multimodal_dp.c  test_anthropic_streaming_ping_dp.c  test_anthropic_text_dp  test_anthropic_text_dp.c  test_anthropic_thinking_dp.c  test_anthropic_thinking_enabled_dp.c  test_anthropic_token_counting_dp  test_anthropic_token_counting_dp.c  test_claude_auth_failure_dp.c  test_claude_list_models_dp.c  test_claude_multimodal_dp.c  test_claude_multimodal_token_count_dp.c  test_claude_streaming_detailed_dp.c  test_claude_streaming_dp.c  test_claude_streaming_error_dp.c  test_claude_streaming_multimodal_detailed_dp.c  test_claude_streaming_multimodal_dp.c  test_claude_streaming_ping_dp.c  (+74 more)
tests/.deps/: test_anthropic_list_models_dp.Po  test_anthropic_multimodal_dp.Po  test_anthropic_streaming_detailed_dp.Po  test_anthropic_streaming_dp.Po  test_anthropic_streaming_multimodal_detailed_dp.Po  test_anthropic_streaming_multimodal_dp.Po  test_anthropic_text_dp.Po  test_anthropic_token_counting_dp.Po  test_error_handling_dp.Po  test_file_attachments_dp.Po  test_gemini_list_models_dp.Po  test_gemini_multimodal_dp.Po  test_gemini_streaming_dp.Po  test_gemini_streaming_multimodal_dp.Po  test_gemini_text_dp.Po  test_gemini_token_counting_dp.Po  test_inline_multimodal_dp.Po  test_openai_list_models_dp.Po  test_openai_multimodal_dp.Po  test_openai_streaming_dp.Po  test_openai_streaming_multimodal_dp.Po  test_openai_text_dp.Po  test_openai_token_counting_dp.Po  test_parameters_dp.Po  test_serialization_dp.Po
tests/.libs/: test_anthropic_list_models_dp  test_anthropic_multimodal_dp  test_anthropic_streaming_detailed_dp  test_anthropic_streaming_dp  test_anthropic_streaming_multimodal_detailed_dp  test_anthropic_streaming_multimodal_dp  test_anthropic_text_dp  test_anthropic_token_counting_dp  test_error_handling_dp  test_file_attachments_dp  test_gemini_list_models_dp  test_gemini_multimodal_dp  test_gemini_streaming_dp  test_gemini_streaming_multimodal_dp  test_gemini_text_dp  test_gemini_token_counting_dp  test_inline_multimodal_dp  test_openai_list_models_dp  test_openai_multimodal_dp  test_openai_streaming_dp  test_openai_streaming_multimodal_dp  test_openai_text_dp  test_openai_token_counting_dp  test_parameters_dp  test_serialization_dp
tests/assets/: README.md  test_data.csv  test_data.json  test_text_large.txt  test_text_small.txt
tests/mock-server/: README.md  control.py  gemini_auth_mock.py  main.py  start_server.sh  stop_server.sh  test_mock_server.py
